--- a/locales/en.default.json
+++ b/locales/en.default.json
@@ -247,7 +247,7 @@
       "update": "Update",
       "login": {
         "title": "Have an account?",
-        "paragraph_html": "<a href=\"{{ link }}\" class=\"link underlined-link\">Log in<\/a> to check out faster."
+        "paragraph_html": "<a href=\"https://saunadev.myshopify.com/products?filter=all\" class=\"link underlined-link\">Log in<\/a> to check out faster."
       }
     },
     "footer": {
